--- a/electron/index.html
+++ b/electron/index.html
@@ -3,196 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Spotwire Electron</title>
-    <style>
-      /* Global body styling */
-      body {
-        margin: 0;
-        padding: 0;
-        background-color: #1e293b;
-        color: #fff;
-        font-family: sans-serif;
-      }
-      /* Utility container for pages */
-      .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        min-height: 100vh;
-        text-align: center;
-        padding: 1rem;
-      }
-      /* Large title styling */
-      .title {
-        font-size: 3rem;
-        font-weight: bold;
-        margin-bottom: 2rem;
-      }
-      /* Buttons */
-      .button {
-        display: inline-block;
-        padding: 0.75rem 1.5rem;
-        background-color: #22c55e;
-        border-radius: 0.5rem;
-        font-size: 1.125rem;
-        font-weight: 500;
-        margin: 0.5rem;
-        text-decoration: none;
-        color: #fff;
-        transition: background-color 0.2s ease-in-out;
-        cursor: pointer;
-      }
-      .button:hover {
-        background-color: #16a34a;
-      }
-      /* Profile page container */
-      .profile-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        min-height: 100vh;
-        padding: 1rem;
-      }
-      /* Header row */
-      .profile-header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto 1rem;
-      }
-      .profile-title {
-        font-size: 2rem;
-        font-weight: bold;
-        margin: 0;
-      }
-      /* Gear icon */
-      .settings-icon {
-        cursor: pointer;
-        font-size: 1.75rem;
-      }
-      /* Search bar row */
-      .search-container {
-        display: flex;
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto 2rem;
-      }
-      .search-input {
-        flex: 1;
-        padding: 0.5rem 1rem;
-        border-radius: 0.25rem;
-        border: none;
-        outline: none;
-        font-size: 1rem;
-      }
-      /* Playlist grid */
-      .playlist-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-        gap: 1rem;
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto;
-      }
-      .playlist-card {
-        background-color: #2a3344;
-        border-radius: 0.5rem;
-        padding: 1rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        cursor: pointer;
-        transition: transform 0.1s ease-in-out;
-      }
-      .playlist-card:hover {
-        transform: scale(1.02);
-      }
-      .playlist-image {
-        width: 100%;
-        height: auto;
-        border-radius: 0.25rem;
-        margin-bottom: 0.75rem;
-        object-fit: cover;
-      }
-      .playlist-name {
-        font-weight: 600;
-        text-align: center;
-      }
-      /* Table styling */
-      table {
-        width: 100%;
-        max-width: 1200px;
-        margin: 1rem auto;
-        border-collapse: collapse;
-      }
-      th, td {
-        padding: 0.75rem;
-        border-bottom: 1px solid #3e4c59;
-        text-align: left;
-      }
-      th {
-        background-color: #2a3344;
-      }
-      /* Settings page styling */
-      .settings-container {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        width: 100%;
-        max-width: 600px;
-        margin: 2rem auto;
-        padding: 1.5rem;
-        background-color: #2a3344;
-        border-radius: 0.5rem;
-      }
-      .settings-header {
-        display: flex;
-        align-items: center;
-        margin-bottom: 1rem;
-      }
-      .settings-title {
-        font-size: 1.5rem;
-        margin-left: 1rem;
-      }
-      .settings-section {
-        margin-top: 1.5rem;
-      }
-      .settings-section h2 {
-        margin-bottom: 0.5rem;
-      }
-      .settings-section p {
-        margin-bottom: 1rem;
-      }
-      .folder-path {
-        font-size: 0.95rem;
-        color: #cbd5e1;
-        margin-bottom: 1rem;
-      }
-      /* Floating Downloads Button and Panel */
-      .floating-downloads-button {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        z-index: 1000;
-      }
-      .download-panel {
-        position: fixed;
-        bottom: 80px;
-        right: 20px;
-        background-color: #2a3344;
-        border-radius: 0.5rem;
-        padding: 1rem;
-        max-height: 300px;
-        overflow-y: auto;
-        z-index: 1000;
-      }
-      .download-panel table {
-        font-size: 0.875rem;
-      }
-    </style>
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="styles.css">
     <!-- React, ReactDOM, Babel -->
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
@@ -217,7 +29,9 @@
 
         // Update an existing download by id
         const updateDownload = (downloadId, updates) => {
-          setDownloads(prev => prev.map(dl => dl.downloadId === downloadId ? { ...dl, ...updates } : dl));
+          setDownloads(prev =>
+            prev.map(dl => dl.downloadId === downloadId ? { ...dl, ...updates } : dl)
+          );
         };
 
         return (
