fix default downloads settings dialog

--- a/electron/src/index.html
+++ b/electron/src/index.html
@@ -5,6 +5,8 @@
     <title>Spotwire Electron</title>
     <!-- Link to external CSS file (generated via Tailwind) -->
     <link rel="stylesheet" href="styles.css" />
+    <!-- Custom dialog styles -->
+    <link rel="stylesheet" href="styles/dialog.css" />
     <!-- React, ReactDOM, Babel -->
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
